# parser

./: .dockerignore  .env.production.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  parser.example.toml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: docker-publish.yml
docs/: CHANGELOG.md  OPERATIONS.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
src/site_parser/: __init__.py  __main__.py  cli.py  extract.py  focus.py  parser.py  settings.py  urls.py  web.py
src/site_parser/api/: __init__.py  web.py
src/site_parser/commands/: __init__.py  cli.py
src/site_parser/config/: __init__.py  settings.py
src/site_parser/core/: __init__.py  extract.py  focus.py  parser.py  urls.py
src/site_parser/infra/: __init__.py  http_client.py  live_logs.py  safe_logging.py
tests/: test_parser.py  test_safe_logging.py  test_web.py
