[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "site-parser"
version = "0.1.0"
description = "Single-domain website contact parser"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "email-validator>=2.0.0",
  "fastapi>=0.111.0",
  "phonenumbers>=9.0.0",
  "requests>=2.31.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
site-parser = "site_parser.cli:main"
site-parser-api = "site_parser.web:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
